--- a/wp-content/themes/reactfit/react-src/package.json
+++ b/wp-content/themes/reactfit/react-src/package.json
@@ -6,7 +6,8 @@
         "@devloco/react-scripts-wptheme": "3.1.1-wptheme-3.1.3",
         "axios": "^0.19.0",
         "react": "^16.9.0",
-        "react-dom": "^16.9.0"
+        "react-dom": "^16.9.0",
+        "react-router-dom": "^5.1.2"
     },
     "scripts": {
         "crabuild": "react-scripts build",
