--- a/wp-content/themes/reactfit/react-src/package.json
+++ b/wp-content/themes/reactfit/react-src/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@devloco/react-scripts-wptheme": "3.1.1-wptheme-3.1.3",
+        "@glidejs/glide": "^3.4.1",
         "axios": "^0.19.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
