--- a/wp-content/themes/reactfit/react-src/package.json
+++ b/wp-content/themes/reactfit/react-src/package.json
@@ -8,7 +8,8 @@
         "axios": "^0.19.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "yarn": "^1.21.1"
     },
     "scripts": {
         "crabuild": "react-scripts build",
